--- a/src/styles/farmer-brand.css
+++ b/src/styles/farmer-brand.css
@@ -86,11 +86,13 @@ marquee {
 .nav2 h1 {
     font-size: 50px;
     cursor: pointer;
+    cursor: not-allowed;
 }
 
 .nav2 h1 span {
     color: rgb(12, 238, 61);
     font-weight: bold;
+    cursor: not-allowed;
 }
 
 .nav2 ul li {
@@ -262,12 +264,15 @@ marquee {
 .detail h1 {
     color: #f7071b;
     text-align: center;
+    cursor: not-allowed;
+  
 }
 
 .detail h2 {
     color: rgb(83, 22, 225);
     text-align: center;
     font-size: 15px;
+    cursor: not-allowed;
 }
 
 /* About Us Section */
@@ -277,12 +282,12 @@ marquee {
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
-    margin: 150px;
+    margin: 100px;
 }
 
 .img1 img {
     border-radius: 10px;
-    margin-right: 100px;
+    margin-right: 40px;
     width: 500px;
     height: auto;
 }
@@ -293,6 +298,8 @@ marquee {
     justify-content: space-between;
     flex-direction: column;
     gap: 10px;
+    text-align: justify;
+
 }
 
 .about-cont2 p:nth-child(1) {
@@ -315,7 +322,7 @@ marquee {
 .about-cont2 .btn {
     padding: 15px 40px;
     font-size: 25px;
-    font-weight: 600;
+    font-weight: 600px;
     border-top-right-radius:50px;
     border-bottom-left-radius:50px ;
     background: #d4c7e9;
@@ -778,7 +785,7 @@ h1 {
     text-align: center;
     font-size: 50px;
     margin: 20px;
-    font-weight: 700;
+    font-weight: 700px;
 }
 
 .blogs {
@@ -791,7 +798,7 @@ flex-direction: row; */
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 30px;
     gap: 50px;
-    margin: 30px 0;
+    margin: 20px;
 }
 
 .blog1 {
@@ -810,6 +817,7 @@ flex-direction: row; */
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
     height: auto;
+    
 }
 
 .blog1 .design-btn {
@@ -842,16 +850,10 @@ flex-direction: row; */
 .blog1 .blog-btn:nth-child(2) {
     position: absolute;
     bottom: 350px;
-    left: 250px;
+    left: 200px;
 }
 
-.admin-img {
-    border-radius: 50%;
-    position: absolute;
-    top: 230px;
-    border: 5px solid white;
-    
-}
+
 
 .blog-cont {
     background: #f5eeee;
@@ -945,7 +947,7 @@ flex-direction: row; */
 /* Expert Section */
 
 .expert {
-    margin: 150px;
+    margin: 10px;
 }
 
 .expert p {
@@ -994,11 +996,11 @@ flex-direction: row; */
     outline: 10px solid white;
     border: 10px solid #26d48c;
     width: 300px;
-    height: 290px;
+    height:290px;
     border-radius: 50%;
     position: absolute;
     top: 40px;
-    left: 40px;
+    left: 25px;
 }
 
 .expert-card .arrow-up .team-img img {
@@ -1039,8 +1041,11 @@ flex-direction: row; */
 /* Experts Media Queries */
 
 @media (max-width: 1200px) {
+
+   
     .expert {
         margin: 100px;
+       
     }
 
     .expert h1 {
@@ -1052,6 +1057,7 @@ flex-direction: row; */
 @media (max-width: 900px) {
     .expert {
         margin: 50px;
+        
     }
 
     .arrow-up img {
@@ -1068,7 +1074,7 @@ flex-direction: row; */
 /* Testimonial Section */
 
 .testimonial {
-    margin: 150px;
+    margin: 100px;
 }
 
 .testimonial p {
@@ -1081,7 +1087,7 @@ flex-direction: row; */
     text-align: center;
     font-size: 50px;
     margin: 20px;
-    font-weight: 700;
+    font-weight: 700px;
 }
 
 .testimonial-cards {
@@ -1093,6 +1099,7 @@ flex-direction: row; */
     border-radius: 15px;
     box-shadow: 1px 3px 15px rgba(0, 0, 0, 0.3);
     margin-top: 30px;
+    
 }
 
 .testimonial-card {
@@ -1164,7 +1171,7 @@ hr {
 /* get In Touch Section */
 
 .contact {
-    margin: 150px;
+    margin: 10px;
 }
 
 .contact p {
@@ -1177,7 +1184,7 @@ hr {
     text-align: center;
     font-size: 50px;
     margin: 20px;
-    font-weight: 700;
+    font-weight: 700px;
 }
 
 .contact p:nth-child(3) {
@@ -1291,7 +1298,18 @@ a {
     }
     
 }
-
+ /*Back-top*/
+ .back-top {
+    padding:5px;
+    background-color: #7d7d86;
+    font-weight: bold;
+    text-align: center;
+}
+.back-top a{
+    text-decoration: none;
+    align-items: center;
+    color: #fff;
+}
 /* Footer Section */
 
 .footer {
@@ -1317,7 +1335,7 @@ a {
     align-items: flex-start;
     flex-direction: column;
     gap: 10px;
-    padding: 60px 80px;
+    padding: 60px 50px;
 }
 
 .footer1:nth-child(1) {
