--- a/src/styles/rajasthan-hotel.css
+++ b/src/styles/rajasthan-hotel.css
@@ -1,1 +1,1 @@
-.text-light{font-weight:700;padding-top:10px}dd{display:flex}body{background-image:url(../../public/images/rajastanihotelbanner.jpg);background-size:cover;background-repeat:no-repeat}.nav-link{color:blue}
+.text-light{font-weight:700;padding-top:10px}dd{display:flex}body{background-image:url(../../public/images/rajastanihotelbanner.jpg);background-size:cover;background-repeat:no-repeat}.nav-link{color:aliceblue}
