--- a/src/styles/farmer-brand.css
+++ b/src/styles/farmer-brand.css
@@ -275,6 +275,26 @@ marquee {
     cursor: not-allowed;
 }
 
+.position{
+    position: fixed;
+    top: 230px;
+}
+.position span{
+    display: inline-block;
+    margin-top: 10px;
+    color: black;
+    background-color:rgb(217, 219, 220);
+    padding: 10px 15px 10px 20px;
+    border-radius: 0px 20px 20px 0px; 
+    font-size: 15px; 
+}
+.position span:hover{
+    font-size: 25px;
+    color:red;
+    background-color: aqua;
+
+}
+
 /* About Us Section */
 
 .about {
