--- a/src/styles/registration.css
+++ b/src/styles/registration.css
@@ -10,7 +10,10 @@ body {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
+span{
+    display: inline;
+    color: red;
+}
 h2 {
     margin-bottom: 20px;
     background-color: lightcoral;
